2022-04-11         [RELEASE] Release of filefill 4.1.0 (Nicole Cordes)
2022-04-11 d09f519 [FEATURE] Handle TypoScript configuration for StaticFileResource (Nicole Cordes)
2022-02-17 e99b09a [FEATURE] Add static file handling as resource target (Nicole Cordes)
2022-02-17 b01207b [TASK] Move resource handler to proper folder (Nicole Cordes)
2022-03-16 0ace821 [TASK] Raise TYPO3 10.4 dependency (Nicole Cordes)
2022-03-15 6a32307 Change TYPO3_MODE to TYPO3 (Thomas Löffler)
2022-03-15 022dcbe Change TYPO3_MODE to TYPO3 (Thomas Löffler)
2022-02-17 bbcacb5 [TASK] Adjust PHP and Travis CI dependency (Nicole Cordes)
2022-02-02 b59ed09 [TASK] Support PHP 8.1 (Georg Ringer)
2021-11-03 522d29a [TASK] Change branch alias in composer.json (Nicole Cordes)

2021-10-26         [RELEASE] Release of filefill 4.0.1 (Nicole Cordes)
2021-10-26 50c7a0f [BUGFIX] Set correct TYPO3 dependency in ext_emconf.php (Nicole Cordes)

2021-10-25         [RELEASE] Release of filefill 4.0.0 (Nicole Cordes)
2021-10-25 20f1caf [TASK] Raise PHP compatibility to 8.0 (Nicole Cordes)
2021-10-25 66cc838 [TASK] Raise compatibility to TYPO3 11.5 (Nicole Cordes)
2021-07-09 d2aa98d Fix misspelling (Nicole Cordes)
2021-07-07 217e0af [DOCS] Add information how to start file fetching (Sybille Peters)
2021-05-20 4ebea41 Update README.md (Franz Kugelmann)
2020-12-16 906279a [BUGFIX] Use baseUrl from configuration in DomainResourceRepository (Nicole Cordes)
2020-12-16 35f7880 [TASK] Update supporting files to EXT:my_skeleton 0.5.2 (Nicole Cordes)
2020-11-27 55bb6a0 [TASK] Clarify mutual exclusive configuration (Mathias Brodala)
2020-11-03 57ce74b [TASK] Update supporting files to EXT:my_skeleton 0.5.1 (Nicole Cordes)
2020-09-05 663aba8 [TASK] Add debug information to README.md (Nicole Cordes)
2020-09-04 6030551 [FEATURE] Add logger support (Nicole Cordes)
2020-09-05 a0b1c28 [BUGFIX] Prevent double slashes on domain urls (Nicole Cordes)
2020-09-05 b2aab97 [TASK] Remove deprecated sys_domain support (Nicole Cordes)